Fri Jun 24 15:48:26 CEST 2005 (tk)
----------------------------------
  * libclamav: improve file type recognizer and add CL_TYPE_RARSFX

Thu Jun 23 22:52:43 CEST 2005 (tk)
----------------------------------
  * libclamav/mspack/qtmd.c: fix possible crash

Thu Jun 23 15:49:10 CEST 2005 (tk)
----------------------------------
  * clamd: revert the queue limit patch

Wed Jun 22 21:51:49 BST 2005 (njh)
----------------------------------
  * libclamav/pdf.c:	Remember to close a file that fails to parse. Fix by
				John Callaghan <jpc at msu.edu>

Wed Jun 22 20:12:54 CEST 2005 (tk)
----------------------------------
  * clamd/clamd.c, shared/output.c: improve output handling (Patch by Mark
				Pizzolato <clamav-devel*subscriptions.pizzolato.net>)

Wed Jun 22 17:52:08 CEST 2005 (tk)
----------------------------------
  * clamd: support operation of both TCP and Unix domain sockets simultaneously
	   Patch by Mark Pizzolato <clamav-devel*subscriptions.pizzolato.net>

Wed Jun 22 16:43:43 CEST 2005 (tk)
----------------------------------
  * clamd: limit the internal queue of requests to MaxConnectionQueueLength
	   and add new option MaxConnectionQueueTime (maximum number of seconds
	   a connection can be queued and unprocessed without being aborted).
	   Patch by Mark Pizzolato <clamav-devel*subscriptions.pizzolato.net>

Sun Jun 19 13:11:20 BST 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Changed debug message when no text part is found in
		an email, since the that can confuse the virus scanner

Sat Jun 18 14:24:54 BST 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Harden the test for the start of a new message in mbox,
		based on a suggestion by "Andrey J. Melnikoff (TEMHOTA)"
		<temnota at kmv.ru>

Sat Jun 18 02:22:26 CEST 2005 (tk)
----------------------------------
  * libclamav/mspack/cabd.c: fix possible infinite loop

Sat Jun 18 01:55:58 CEST 2005 (tk)
----------------------------------