@@ -1,3 +1,9 @@
+Mon Jun 27 22:01:55 BST 2005 (njh)
+----------------------------------
+  * clamav-milter:	Changed the default child_timeout to 5 minutes
+			Keep a copy of the trie root in privdata
+			Removed trylock/unlock code in clamfi_abort
+
 Fri Jun 24 15:48:26 CEST 2005 (tk)
 ----------------------------------
   * libclamav: improve file type recognizer and add CL_TYPE_RARSFX
